@@ -1,5 +1,7 @@
 devel
 -----
+* Fix internal issue #777: Fixed memory access while substituting
+  stored values for ArangoSearch view optimization
 
 * Fix log topic of general shutdown message from "cluster" to general.
 
